--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -95,7 +95,7 @@ mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50b
 
 # contact form - (choose formspress or getform)
 # getform_endpoint: 83b703c3-9e47-4df4-ac55-e24d7eb02abc
-formspree_email: johndoe@gmail.com
+formspree_email: haor2@illinois.edu
 
 # releases - widget can be (sidebar, modal or embed)
 olvy_organization: devlopr
