added silkrow to author.yml

--- a/docs/_data/authors.yml
+++ b/docs/_data/authors.yml
@@ -14,3 +14,12 @@ boomboomhorse:
     site: http://moomoohorse.com
     avatar: moomoohorse.png
     email: haor2@illinois.edu
+silkrow:
+	name: Erkai Yu
+	username: silkrow
+	bio: "Bazinga!"
+	site: http://erkaiyublog.github.io
+	avatar: silkrow.jpeg
+	email: si1krow@outlook.com
+
+
