--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,7 +3,7 @@ subtitle: ZJU-UIUC. Majored in EE. Currently focusing on File System and Byte-ad
 description: >- # this means to ignore newlines until "baseurl:"
   
 
-url: "" # the base hostname & protocol for your site, e.g. https://example.github.io
+url: "https://moomoohorse.github.io" # the base hostname & protocol for your site, e.g. https://example.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
 
 # Navigation
