update main site

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -30,7 +30,7 @@ author_bio: As I grow older, I felt my passion goes away. I see most people live
 author_email: "haor2@illinois.edu"
 author_location: UIUC
 author_website_url: "https://moomoohorse.com"
-typewrite-text: This site documents what happened in my professional life.
+typewrite-text: 简单的记录下过去几年发生了什么
 hero_cover_img: sample_cover.jpg # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
 
 # Experiences
