--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -26,7 +26,7 @@ urls:
 
 author_logo: profile.png
 author: moomoohorse
-author_bio: As I grow older, I felt my passion goes away. I see most people live with a template of their future.  
+author_bio: 一种对人分类的方法是，是否容易被情绪裹挟。我是容易被风险和损失控制，沉浸在情绪中无法自拔的人。这有两个副作用：无法享受除了情绪外的生活，以及无法冷静的尽力而为。我希望情绪是一阵风，它会来也会走。假如在尽力而为后，还是深陷困境，不因为困境本身感到恐惧，而是接受不受控制自然发生的所有后果。
 author_email: "haor2@illinois.edu"
 author_location: UIUC
 author_website_url: "https://moomoohorse.com"
